5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4135/executions/1836_1278.log
== TEST (2019-07-01 18:52:45) 
-- CODE:
from numpy import*
from numpy.linalg import*


n1=int(input("Digite a cidade 1: "))
n2=int(input("Digite a cidade 2: "))
mat=array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])
while(n1!=-1 and n2!==-1):
	x=n1//111-1
   y=n2//111-1

print(mat[x,y])
-- ERROR:
File "XXXX", line 8
    while(n1!=-1 and n2!==-1):
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 18:53:27) 
-- CODE:
from numpy import*
from numpy.linalg import*


n1=int(input("Digite a cidade 1: "))
n2=int(input("Digite a cidade 2: "))
mat=array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])
while(n1!=-1 or n2!=-1):
	x=n1//111-1
   y=n2//111-1

print(mat[x,y])
-- ERROR:
File "XXXX", line 10
    y=n2//111-1
              ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 18:53:58) 
-- CODE:
from numpy import*
from numpy.linalg import*


n1=int(input("Digite a cidade 1: "))
n2=int(input("Digite a cidade 2: "))
mat=array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])
while(n1!=-1 or n2!=-1):
x=n1//111-1
y=n2//111-1

print(mat[x,y])
-- ERROR:
File "XXXX", line 9
    x=n1//111-1
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 18:55:12) 
-- CODE:
from numpy import*
from numpy.linalg import*


n1=int(input("Digite a cidade 1: "))
n2=int(input("Digite a cidade 2: "))
mat=array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])

while(n1!=-1 or n2!=-1):
	x=(n1//111)-1
	y=(n2//111)-1

print(mat[x,y])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 18:55:56) 
-- CODE:
from numpy import*
from numpy.linalg import*


n1=int(input("Digite a cidade 1: "))
n2=int(input("Digite a cidade 2: "))
mat=array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])

while(n1!=-1 or n2!=-1):
	x=(n1//111)-1
	y=(n2//111)-1
   print(mat[x,y])
-- ERROR:
File "XXXX", line 12
    print(mat[x,y])
                  ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 18:56:06) 
-- CODE:
from numpy import*
from numpy.linalg import*


n1=int(input("Digite a cidade 1: "))
n2=int(input("Digite a cidade 2: "))
mat=array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])

while(n1!=-1 or n2!=-1):
	x=(n1//111)-1
	y=(n2//111)-1
print(mat[x,y])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 18:56:24) 
-- CODE:
from numpy import*
from numpy.linalg import*


n1=int(input("Digite a cidade 1: "))
n2=int(input("Digite a cidade 2: "))
mat=array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])

while(n1==-1 or n2==-1):
	x=(n1//111)-1
	y=(n2//111)-1
print(mat[x,y])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 18:56:44) 
-- CODE:
from numpy import*
from numpy.linalg import*


n1=int(input("Digite a cidade 1: "))
n2=int(input("Digite a cidade 2: "))
mat=array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])

while(n1==-1 or n2==-1):
	x=(n1//111)-1
	y=(n2//111)-1
   print(mat[x,y])
-- ERROR:
File "XXXX", line 12
    print(mat[x,y])
                  ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 18:57:05) 
-- CODE:
from numpy import*
from numpy.linalg import*


n1=int(input("Digite a cidade 1: "))
n2=int(input("Digite a cidade 2: "))
mat=array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])

while(n1==-1 or n2==-1):
	x=(n1//111)-1
	y=(n2//111)-1

print(mat[x,y])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 18:57:53) 
-- CODE:
from numpy import*
from numpy.linalg import*


n1=int(input("Digite a cidade 1: "))
n2=int(input("Digite a cidade 2: "))
mat=array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])

x=(n1//111)-1
y=(n2//111)-1
while(n1==-1 or n2==-1):
	
print(mat[x,y])
-- EXECUTION TIME:
0.650906
-- ERROR:
  File "/home/codebench/codes/1836/1278/main.py", line 13
    print(mat[x,y])
        ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 18:57:56) 
-- CODE:
from numpy import*
from numpy.linalg import*


n1=int(input("Digite a cidade 1: "))
n2=int(input("Digite a cidade 2: "))
mat=array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])

x=(n1//111)-1
y=(n2//111)-1
while(n1==-1 or n2==-1):
	
print(mat[x,y])
-- ERROR:
File "XXXX", line 13
    print(mat[x,y])
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 18:58:06) 
-- CODE:
from numpy import*
from numpy.linalg import*


n1=int(input("Digite a cidade 1: "))
n2=int(input("Digite a cidade 2: "))
mat=array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])

x=(n1//111)-1
y=(n2//111)-1
while(n1==-1 or n2==-1):
	print(mat[x,y])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 18:58:17) 
-- CODE:
from numpy import*
from numpy.linalg import*


n1=int(input("Digite a cidade 1: "))
n2=int(input("Digite a cidade 2: "))
mat=array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])

x=(n1//111)-1
y=(n2//111)-1
while(n1==-1 or n2==-1):
	print(mat[x,y])
-- EXECUTION TIME:
0.761938
-- TEST CASE 1:
---- input:
333
555
666
111
-1

---- correct output:
24
---- user output:

-- TEST CASE 2:
---- input:
222
777
555
333
666
111
-1

---- correct output:
50
---- user output:

-- TEST CASE 3:
---- input:
111
222
111
333
111
555
111
777
-1

---- correct output:
57
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 19:46:08) 
-- CODE:
from numpy import*
from numpy.linalg import*


n1=int(input("Digite a cidade 1: "))
n2=int(input("Digite a cidade 2: "))
mat=array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])

x=(n1//111)-1
y=(n2//111)-1
while(n1!=-1 or n2!=-1):
	print(mat[x,y])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 19:46:41) 
-- CODE:
from numpy import*
from numpy.linalg import*


n1=int(input("Digite a cidade 1: "))
n2=int(input("Digite a cidade 2: "))
mat=array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])

x=(n1//111)-1
y=(n2//111)-1
while(n1!=-1 or n2!=-1):
	print(mat[x,y])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 19:53:35) 
-- CODE:
from numpy import*
from numpy.linalg import*


n1=int(input("Digite a cidade 1: "))
n2=int(input("Digite a cidade 2: "))
mat=array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])
while(n1!=-1 or n2!=-1):
	x=(n1//111)-1
   y=(n2//111)-1

	print(mat[x,y])
-- ERROR:
File "XXXX", line 10
    y=(n2//111)-1
                ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 19:53:47) 
-- CODE:
from numpy import*
from numpy.linalg import*


n1=int(input("Digite a cidade 1: "))
n2=int(input("Digite a cidade 2: "))
mat=array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])
while(n1!=-1 or n2!=-1):
	x=(n1//111)-1
   y=(n2//111)-1

print(mat[x,y])
-- ERROR:
File "XXXX", line 10
    y=(n2//111)-1
                ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 19:54:08) 
-- CODE:
from numpy import*
from numpy.linalg import*


n1=int(input("Digite a cidade 1: "))
n2=int(input("Digite a cidade 2: "))
mat=array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])
while(n1!=-1 or n2!=-1):
x=(n1//111)-1
y=(n2//111)-1

print(mat[x,y])
-- ERROR:
File "XXXX", line 9
    x=(n1//111)-1
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 19:54:19) 
-- CODE:
from numpy import*
from numpy.linalg import*


n1=int(input("Digite a cidade 1: "))
n2=int(input("Digite a cidade 2: "))
mat=array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])
while(n1!=-1 or n2!=-1):
	x=(n1//111)-1
   y=(n2//111)-1

print(mat[x,y])
-- ERROR:
File "XXXX", line 10
    y=(n2//111)-1
                ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 19:54:33) 
-- CODE:
from numpy import*
from numpy.linalg import*


n1=int(input("Digite a cidade 1: "))
n2=int(input("Digite a cidade 2: "))
mat=array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])

x=(n1//111)-1
y=(n2//111)-1
while(n1!=-1 or n2!=-1):
	print(mat[x,y])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 20:16:20) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat=array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])

soma=0
a=0
b=0
aux=111
vet=zeros(7,dtype=int)
for i in range(7):
	vet[i]=aux
	aux+=111

n=int(input("Digite 1: "))
n2=1
while(n2!=-1):
	n2=int(input("Digite 2: "))
	
	for i in range(7):
		if(n == vet[i]):
			a = i
		if(n2 == vet[i]):
			b = i
	soma+=mat[a,b]
	a=b
	n=n2
print(soma)	
	
	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 20:17:29) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat=array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])

soma=0
a=0
b=0
aux=111
vet=zeros(7,dtype=int)
for i in range(7):
	vet[i]=aux
	aux+=111

n=int(input("Digite 1: "))
n2=1
while(n2!=-1):
	n2=int(input("Digite 2: "))
	
	for i in range(7):
		if(n == vet[i]):
			a = i
		if(n2 == vet[i]):
			b = i
	soma+=mat[a,b]
	a=b
	n=n2
print(soma)	
	
	
	

-- EXECUTION TIME:
0.96515
-- TEST CASE 1:
---- input:
333
555
666
111
-1

---- correct output:
24
---- user output:
24
-- TEST CASE 2:
---- input:
222
777
555
333
666
111
-1

---- correct output:
50
---- user output:
50
-- TEST CASE 3:
---- input:
111
222
111
333
111
555
111
777
-1

---- correct output:
57
---- user output:
57
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
